# engineering-metrics-data-collector

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  rust.yml
migrations/: 20230503195350_schema.down.sql  20230503195350_schema.up.sql  20231207130000_schema.down.sql  20231207130000_schema.up.sql  20260101130000_schema.down.sql  20260101130000_schema.up.sql  20260106120000_ai_summarization.down.sql  20260106120000_ai_summarization.up.sql  20260501120000_copilot_metrics.down.sql  20260501120000_copilot_metrics.up.sql
src/: context.rs  gitlab_group_mrs_query.graphql  gitlab_group_mrs_schema.graphql  lib.rs  main.rs  store.rs  test.graphql
src/client/: atlassian_rest_client.rs  copilot_usage_metrics_client.rs  gitlab_graphql_client.rs  gitlab_group_issues_query.graphql  gitlab_group_issues_schema.graphql  gitlab_group_mrs_query.graphql  gitlab_group_mrs_schema.graphql  gitlab_group_projects_query.graphql  gitlab_group_projects_schema.graphql  gitlab_rest_client.rs  mod.rs
src/component/: collector_runs.rs  copilot_collector_runs.rs  copilot_metrics.rs  external_issue.rs  import_progress.rs  issue.rs  merge_request.rs  mod.rs  project.rs
tests/: collector_runs_it.rs  copilot_collector_runs_it.rs  copilot_metrics_it.rs  integration_tests.rs  issue_it.rs  merge_request_it.rs  postgres_container.rs  project_it.rs  store_it.rs
