[package]
name = "engineering-metrics-data-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3.0.0", features = ["time_0_3"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres", "migrate", "macros", "time" ] }
graphql_client = { version = "0.12.0", features = ["reqwest"] }
dotenv = "0.15.0"

[dev-dependencies]
serde_json = "1.0"
testcontainers = "0.14" 
wiremock = "0.5"
surf = "2.3.2"