[package]
name = "engineering-metrics-data-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3.11", features = ["time_0_3"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls" , "postgres", "migrate", "macros", "time", "uuid" ] }
graphql_client = "0.14"
dotenv = "0.15.0"
thiserror = "1.0"
genai = "0.4.4"
uuid = { version = "1.11", features = ["v7"] }

[dev-dependencies]
serde_json = "1.0"
testcontainers = "0.22" 
wiremock = "0.6"
surf = "2.3.2"
